fix - dashboard vertical align

--- a/src/pages/home/home.component.scss
+++ b/src/pages/home/home.component.scss
@@ -286,6 +286,7 @@ a:hover .material-icons{
           -moz-column-gap: 7px;
           column-gap: 7px;
           cursor: pointer;
+          align-items: center;
           img{
             height: 24px;
             width: 24px;
